--- a/templates/about.html
+++ b/templates/about.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title>Про магазин</title>
-</head>
-<body>
-Про магазин
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %}
+<title>Про магазин</title>
+{% endblock %}
+
+{% block body %}
+<h1>Про магазин</h1>
+{% endblock %}
+
