--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title>Онлайн магазин</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %}
+<title>Онлайн магазин</title>
+{% endblock %}
+
+{% block body %}
 <h1>Онлайн магазин</h1>
-</body>
-</html>
+{% endblock %}
+
