--- a/templates/base.html
+++ b/templates/base.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+<!--    <meta name="viewport"-->
+<!--          content="windth=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">-->
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    {% block title %}{% endblock %}
 </head>
 <body>
-
+    {% block body %}{% endblock %}
 </body>
 </html>
