--- a/templates/about.html
+++ b/templates/about.html
@@ -5,6 +5,9 @@
 {% endblock %}
 
 {% block body %}
-<h1>Про магазин</h1>
+<div class="container">
+    <h1>Про магазин</h1>
+    <p>Какой то текст</p>
+</div>
 {% endblock %}
 
