fixed bag. Added output items

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
 
 {% block body %}{% endblock %}
 
-
+<main class="container">
   <footer class="pt-4 my-md-5 pt-md-5 border-top">
     <div class="row">
       <div class="col-12 col-md">
