--- a/templates/index.html
+++ b/templates/index.html
@@ -5,11 +5,14 @@
 {% endblock %}
 
 {% block body %}
-<main class="container">
-  <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-    <h1 class="display-4">Pricing</h1>
-    <p class="lead">Quickly build an effective pricing table for your potential customers with this Bootstrap example. It’s built with default Bootstrap components and utilities with little customization.</p>
-  </div>
+
+<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+  <h1 class="display-4">Pricing</h1>
+  <p class="lead">Quickly build an effective pricing table for your potential customers with this Bootstrap example. It’s built with default Bootstrap components and utilities with little customization.</p>
+</div>
+
+<div class="container">
+  {{ data }}
 
   <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
     <div class="col">
@@ -64,6 +67,6 @@
     </div>
     </div>
   </div>
-
+</div>
 {% endblock %}
 
