--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,10 @@
 </div>
 
 <div class="container">
-  {{ data }}
+
+  {% for el in data%}
+
+  {%endfor%}
 
   <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
     <div class="col">
